--- a/starter/index.html
+++ b/starter/index.html
@@ -331,6 +331,23 @@
                                 <input id="email" type="email" class="form__input" placeholder="Email Address" required>
                                 <label class="form__label" for="email">Email Address</label>
                             </div>
+
+                            <div class="form__group">
+                                <div class="form__radio-group">
+                                    <input type="radio" name="size" id="small" class="form__radio-input">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Small tour group
+                                    </label>
+                                </div>
+                                <div class="form__radio-group">
+                                    <input type="radio" name="size" id="large" class="form__radio-input">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Lage tour group
+                                    </label>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
