--- a/starter/index.html
+++ b/starter/index.html
@@ -15,6 +15,23 @@
 </head>
 
 <body>
+    <div class="navigation">
+        <input type="checkbox" name="" id="navi-toggle" class="navigation__checkbox">
+        <label for="navi-toggle" class="navigation__button">
+            <div class="navigation__icon">&nbsp;</div>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="" class="navigation__link"><span>01</span>About Natous</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link"><span>02</span>Your benefit</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link"><span>03</span>Popular tours</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link"><span>04</span>Stories</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link"><span>05</span>Book now</a></li>
+            </ul>
+        </nav>
+    </div>
     <header class="header">
         <div class="logo-box">
             <img src="img/logo-white.png" alt="My Logo" class="logo">
@@ -29,43 +46,6 @@
             <a href="#" class="btn btn-white btn-animated">Discover our tour</a>
         </div>
     </header>
-    <!-- 
-    <section class="grid-test">
-        <div class="row">
-            <div class="col-1-of-2">Col-1-of-2</div>
-            <div class="col-1-of-2">Col-1-of-2</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">Col-1-of-3</div>
-            <div class="col-1-of-3">Col-1-of-3</div>
-            <div class="col-1-of-3">Col-1-of-3</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">Col-1-of-3</div>
-            <div class="col-2-of-3">Col-2-of-3</div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-1-of-4">Col-1-of-4</div>
-            <div class="col-1-of-4">Col-1-of-4</div>
-            <div class="col-1-of-4">Col-1-of-4</div>
-            <div class="col-1-of-4">Col-1-of-4</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">Col-1-of-4</div>
-            <div class="col-1-of-4">Col-1-of-4</div>
-            <div class="col-2-of-4">Col-2-of-4</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">Col-1-of-4</div>
-            <div class="col-3-of-4">Col-3-of-4</div>
-        </div>
-    </section> -->
 
     <main>
         <section class="section-about">
@@ -93,6 +73,19 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
+
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jgp 1000w" alt="Photo 1"
+                            size="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                            class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
+
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jgp 1000w" alt="Photo 2"
+                            size="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                            class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
+
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jgp 1000w" alt="Photo 3"
+                            size="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                            class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
+
                         <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
                         <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
                         <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
@@ -146,7 +139,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exiciting tours for adventurous people
@@ -181,7 +174,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">N254</p>
                                 </div>
-                                <a href="" class="btn btn-white">Book now!</a>
+                                <a href="#popup" class="btn btn-white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -214,7 +207,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">N254</p>
                                 </div>
-                                <a href="" class="btn btn-white">Book now!</a>
+                                <a href="#popup" class="btn btn-white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -247,7 +240,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">897</p>
                                 </div>
-                                <a href="" class="btn btn-white">Book now!</a>
+                                <a href="#popup" class="btn btn-white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -361,29 +354,56 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="img/logo-green-2x.png" alt="Logo" class="footer__logo">
+            <picture class="footer__logo">
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                    media="(max-width: 37.5em)">
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Logo">
+            </picture>
         </div>
-            <div class="row">
-                <div class="col-1-of-2">
-                    <div class="footer__navigation">
-                        <ul class="footer__list">
-                            <li class="footer__item"><a href="" class="footer__link">Company</a></li>
-                            <li class="footer__item"><a href="" class="footer__link">Contact us</a></li>
-                            <li class="footer__item"><a href="" class="footer__link">Careers</a></li>
-                            <li class="footer__item"><a href="" class="footer__link">Privacy</a></li>
-                            <li class="footer__item"><a href="" class="footer__link">Terms</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-1-of-2">
-                    <p class="footer__copyright">
-                        Build by <a href="#" class="footer__link">BrainyDeveloper</a> Copyright &copy; Every resources
-                        here is explored for academic and learning purpose
-                    </p>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="" class="footer__link">Company</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Contact us</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Careers</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Privacy</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Terms</a></li>
+                    </ul>
                 </div>
             </div>
-    
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Build by <a href="#" class="footer__link">BrainyDeveloper</a> Copyright &copy; Every resources
+                    here is explored for academic and learning purpose
+                </p>
+            </div>
+        </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read the terms before
+                    booking</h3>
+                <p class="popup__text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi molestias natus
+                    perferendis accusamus porro, eveniet debitis dolor! Non repudiandae aliquid porro! Quaerat
+                    dolore numquam nihil, sunt nulla aliquam, culpa neque aspernatur nobis cupiditate vitae ducimus
+                    vel soluta placeat necessitatibus optio! Cupiditate vero impedit aperiam ullam voluptas dolore
+                    minus officia!
+                </p>
+                <a href="#" class="btn btn-green">Book Now</a>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
